[FIX] #CGMTMA-11 add bank account in sale order an invoice pdf

--- a/cgm-addons/cgm_account/report/report_invoice.xml
+++ b/cgm-addons/cgm_account/report/report_invoice.xml
@@ -41,6 +41,11 @@
                 <td colspan="4"/>
             </tr>
         </xpath>
-
+        <xpath expr="//p[@name='payment_communication']" position="before">
+            <t t-if="o.partner_bank_id">
+                <strong>Bank account:</strong>
+                <p t-field="o.partner_bank_id"/>
+            </t>
+        </xpath>
     </template>
 </odoo>
