--- a/cgm-addons/cgm_account/report/report_invoice.xml
+++ b/cgm-addons/cgm_account/report/report_invoice.xml
@@ -44,7 +44,10 @@
         <xpath expr="//p[@name='payment_communication']" position="before">
             <t t-if="o.partner_bank_id">
                 <strong>Bank account:</strong>
-                <p t-field="o.partner_bank_id"/>
+                <div t-field="o.partner_bank_id.acc_number"/>
+                SWIFT BIC:
+                <span t-field="o.partner_bank_id.bank_id.bic"/>
+                <div t-field="o.partner_bank_id.bank_id.note"/>
             </t>
         </xpath>
     </template>
