--- a/cgm-addons/cgm_account/views/account_move_line_views.xml
+++ b/cgm-addons/cgm_account/views/account_move_line_views.xml
@@ -9,14 +9,13 @@
         <tree string="Journal Items" default_order="date desc, move_name desc, id">
           <!-- Displayed fields -->
           <field name="move_name" invisible="1"/>
+          <field name="partner_ref"/>
           <field name="product_id"
             optional="show"
           />
           <field name="name" widget="section_and_note_text"/>
           <field name="account_id"
-                 groups="account.group_account_readonly"
-                 options="{'no_create': True}"
-                 attrs="{'required': [('display_type', '=', False)]}"/>
+                 groups="account.group_account_readonly"/>
           <field name="analytic_account_id"
                  groups="analytic.group_analytic_accounting"
                  optional="show"/>
@@ -30,7 +29,6 @@
           <field name="price_unit" string="Price"/>
           <field name="discount" string="Disc.%" optional="hide"/>
           <field name="tax_ids" widget="many2many_tags"
-                 options="{'no_create': True}"
                  optional="show"/>
           <field name="price_subtotal"
                  string="Subtotal"
@@ -38,29 +36,6 @@
           <field name="price_total"
                  string="Total"
                  groups="account.group_show_line_subtotals_tax_included"/>
-
-          <!-- Others fields -->
-          <field name="partner_id" invisible="1"/>
-          <field name="amount_currency" invisible="1"/>
-          <field name="currency_id" invisible="1"/>
-          <field name="debit" invisible="1"/>
-          <field name="credit" invisible="1"/>
-          <field name="date" invisible="1"/>
-          <field name="date_maturity" invisible="1"/>
-
-          <field name="group_tax_id" invisible="1"/>
-          <field name="tax_line_id" invisible="1"/>
-          <field name="tax_repartition_line_id" invisible="1"/>
-          <field name="tax_tag_ids" invisible="1"/>
-          <field name="tax_base_amount" invisible="1"/>
-          <field name="company_id" invisible="1"/>
-          <field name="company_currency_id" invisible="1"/>
-          <field name="recompute_tax_line" invisible="1" force_save="1"/>
-          <field name="display_type" force_save="1" invisible="1"/>
-          <field name="is_rounding_line" invisible="1"/>
-          <field name="exclude_from_invoice_tab" invisible="1"/>
-          <field name="account_internal_type" invisible="1"/>
-          <field name="account_internal_group" invisible="1"/>
         </tree>
       </field>
     </record>
@@ -71,7 +46,7 @@
       <field name="res_model">account.move.line</field>
       <field name="view_mode">tree</field>
       <field name="view_id" ref="view_move_line_tree"/>
-      <field name="domain">[('move_id.move_type', '=', 'in_invoice')]</field>
+      <field name="domain">[('move_id.move_type', '=', 'in_invoice'), ('exclude_from_invoice_tab', '=', False)]</field>
       <field name="context">{'create': False}</field>
     </record>
 
