[add] HT01596: allow force reception in PO

--- a/cgm-addons/cgm_purchase/views/purchase_order_views.xml
+++ b/cgm-addons/cgm_purchase/views/purchase_order_views.xml
@@ -17,6 +17,24 @@
                 <xpath expr="//field[@name='order_line']//tree/field[@name='qty_invoiced']" position="attributes">
                     <attribute name="sum">Total Qty Invoiced</attribute>
                 </xpath>
+
+                <field name="state" position="before">
+                    <!-- states and attrs[invisible] must be combined with an extra & -->
+                    <button
+                            name="action_force_received"
+                            type="object"
+                            string="Force reception done"
+                            states="purchase"
+                            attrs="{'invisible': ['|', '|', ('force_received', '=', True), ('reception_status', '=', 'received')]}"
+                    />
+                    <button
+                            name="action_unforce_received"
+                            type="object"
+                            string="Unforce reception done"
+                            states="purchase"
+                            attrs="{'invisible': ['|', ('force_received', '=', False)]}"
+                    />
+                </field>
             </field>
         </record>
 
