--- a/cgm-addons/cgm_stock/views/stock_picking_views.xml
+++ b/cgm-addons/cgm_stock/views/stock_picking_views.xml
@@ -8,11 +8,17 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="priority" eval="16"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='move_ids_without_package']//tree/field[@name='product_uom_qty']" position="attributes">
+                <xpath expr="//field[@name='move_ids_without_package']//tree/field[@name='product_uom_qty']"
+                       position="attributes">
                     <attribute name="sum">Total Ordered Qty</attribute>
                 </xpath>
-                <xpath expr="//field[@name='move_ids_without_package']//tree/field[@name='quantity_done']" position="attributes">
+                <xpath expr="//field[@name='move_ids_without_package']//tree/field[@name='quantity_done']"
+                       position="attributes">
                     <attribute name="sum">Total Done Qty</attribute>
+                </xpath>
+                <xpath expr="//field[@name='move_ids_without_package']//tree/field[@name='product_uom_qty']"
+                       position="before">
+                    <field name="barcode" optional="hide" />
                 </xpath>
             </field>
         </record>
