--- a/cgm-addons/cgm_product/views/product_brand_views.xml
+++ b/cgm-addons/cgm_product/views/product_brand_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <form string="Product Brand">
                 <sheet>
-                    <widget name="web_ribbon" text="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
+                    <widget name="web_ribbon" text="Archived" bg_color="bg-danger" invisible="active"/>
                     <field name="active" invisible="1"/>
                     <div class="oe_title">
                         <h1>
