--- a/cgm-addons/cgm_product/views/product_collection_views.xml
+++ b/cgm-addons/cgm_product/views/product_collection_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <form string="Product Collection">
                 <sheet>
-                    <widget name="web_ribbon" text="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
+                    <widget name="web_ribbon" text="Archived" bg_color="bg-danger" invisible="active"/>
                     <field name="image_1920" widget='image' class="oe_avatar" options='{"preview_image": "image_128"}'/>
                     <field name="active" invisible="1"/>
                     <div class="oe_title">
