--- a/cgm-addons/cgmobile/views/product_template_views.xml
+++ b/cgm-addons/cgmobile/views/product_template_views.xml
@@ -13,7 +13,7 @@
                 <field name="product_material_id" optional="hide" />
                 <field name="product_protection_level_id" optional="hide" />
                 <field name="device_type_id" optional="hide" />
-                <field name="device_brand_id" optional="hide" />
+<!--                <field name="device_brand_id" optional="hide" />-->
                 <field name="device_model_id" optional="hide" />
             </xpath>
         </field>
@@ -41,8 +41,9 @@
                     </group>
                     <group string="Device Information" name="product_qualif_device">
                         <field name="device_type_id" />
-                        <field name="device_brand_id" />
-                        <field name="device_model_id" domain="['|', ('brand_id', '=', device_brand_id), ('brand_id', '=', False)]" />
+<!--                        <field name="device_brand_id" />-->
+                        <field name="device_model_id"/>
+<!--                        FIXME v17 remove domain-->
                     </group>
                 </group>
             </xpath>
@@ -55,12 +56,12 @@
 <!--            <xpath expr="//kanban[1]/templates[1]/t[1]/div[1]/div[2]/strong[1]/field[@name='name']" position="before">-->
 <!--                <span class="text-secondary"><field name="product_brand_id" /></span>-->
 <!--            </xpath>-->
-            <xpath expr="//field[@name='uom_id']" position="after">
-                <div name="device_info" class="mt-1" t-if="record.device_brand_id.value or record.device_model_id.value" >
-                    Device: <field name="device_brand_id" />
-                    <field name="device_model_id" />
-                </div>
-            </xpath>
+<!--            <xpath expr="//field[@name='uom_id']" position="after">-->
+<!--                <div name="device_info" class="mt-1" t-if="record.device_model_id.value" >-->
+<!--                    Device: <field name="device_brand_id" />-->
+<!--                    <field name="device_model_id" />-->
+<!--                </div>-->
+<!--            </xpath>-->
             </data>
         </field>
 <!--        <field name="field_parent" eval="False"/>-->
