--- a/cgm-addons/cgmobile/views/product_template_views.xml
+++ b/cgm-addons/cgmobile/views/product_template_views.xml
@@ -7,10 +7,10 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='barcode']" position="after">
                 <field name="upc_code" optional="hide" />
-                <field name="product_color_id" optional="hide" />
-                <field name="product_category_id" optional="hide" />
-                <field name="product_sub_category_id" optional="hide" />
-                <field name="product_material_id" optional="hide" />
+<!--                <field name="product_color_id" optional="hide" />-->
+<!--                <field name="product_category_id" optional="hide" />-->
+<!--                <field name="product_sub_category_id" optional="hide" />-->
+<!--                <field name="product_material_id" optional="hide" />-->
                 <field name="product_protection_level_id" optional="hide" />
                 <field name="device_type_id" optional="hide" />
 <!--                <field name="device_brand_id" optional="hide" />-->
@@ -32,12 +32,12 @@
                 <group>
                     <group string="Product Information" name="product_qualif_product">
 <!--                        <field name="product_brand_id" />-->
-                        <field name="product_color_id" />
-                        <field name="product_category_id" />
-                        <field name="product_sub_category_id" domain="['|', ('category_id', '=', product_category_id), ('category_id', '=', False)]" />
-                        <field name="product_material_id" />
+<!--                        <field name="product_color_id" />-->
+<!--                        <field name="product_category_id" />-->
+<!--                        <field name="product_sub_category_id" domain="['|', ('category_id', '=', product_category_id), ('category_id', '=', False)]" />-->
+<!--                        <field name="product_material_id" />-->
                         <field name="product_protection_level_id" />
-                        <field name="product_collection_id" />
+<!--                        <field name="product_collection_id" />-->
                     </group>
                     <group string="Device Information" name="product_qualif_device">
                         <field name="device_type_id" />
