--- a/cgm-addons/cgm_product/views/product_product_views.xml
+++ b/cgm-addons/cgm_product/views/product_product_views.xml
@@ -12,17 +12,17 @@
             </field>
         </record>
 
-        <record id="product_product_easy_edit_view" model="ir.ui.view">
-            <field name="name">product.product.easy.edit.view</field>
-            <field name="model">product.product</field>
-            <field name="priority">100</field>
-            <field name="inherit_id" ref="product.product_variant_easy_edit_view"/>
-            <field name="arch" type="xml">
-                <label for="name" position="replace"/>
-                <field name="default_code" position="replace"/>
-                <field name="name" position="replace"/>
-            </field>
-        </record>
+<!--        <record id="product_product_easy_edit_view" model="ir.ui.view">-->
+<!--            <field name="name">product.product.easy.edit.view</field>-->
+<!--            <field name="model">product.product</field>-->
+<!--            <field name="priority">100</field>-->
+<!--            <field name="inherit_id" ref="product.product_variant_easy_edit_view"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <label for="name" position="replace"/>-->
+<!--                <field name="default_code" position="replace"/>-->
+<!--                <field name="name" position="replace"/>-->
+<!--            </field>-->
+<!--        </record>-->
 
     </data>
 </odoo>
